2012-06-31 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
	* Feature: List the entries in a regular folder. The entries are not yet recognized.
	* Feature: stat reponse provides the underlying folder modification time.
	* Feature: Permission model for each node type.
	* Feature: Copy the fusermount behaviour when invalid parameters are encountered.
	* Feature: Adds own usage information around the fuse one.
	* Bug fix: NameSearchTree lookup was doing infinite loop.

2012-06-30 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
	* Initial import
	* Feature: Index tree to speed up directory entry lookup